fixed join and the template now works, last two things are creating list of joiners and fixing validations

--- a/apps/travels/templates/travels/destination.html
+++ b/apps/travels/templates/travels/destination.html
@@ -16,7 +16,7 @@
             <p>Travel Date From: {{trip.start_date}}</p>
             <p>Travel Date To: {{trip.end_date}}</p>
         <h3>Other users joining the trip:</h3>
-            {{trip.joiners}}
+            {{trip.joiners.name}}
             {% for name in joiners %}
             <p>{{name.name}}</p>
             {% endfor %}
